# MiDaS-v2.1-small-cpp

./: .gitignore  CMakeLists.txt  README.md  source2include.sh
lib/midas_cpp/: CMakeLists.txt  midas.cpp  midas.h
opencv_example/: CMakeLists.txt  opencv_example.cpp
